--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "description": "Metaballs written in TypeScript.",
   "scripts": {
-    "start": "webpack-dev-server --config webpack/dev.js --open"
+    "start": "webpack-dev-server --config webpack/dev.js --open",
+    "build": "webpack --config webpack/prod.js"
   },
   "author": "znu",
   "license": "MIT",
@@ -11,6 +12,7 @@
     "@babel/core": "^7.10.4",
     "@babel/preset-env": "^7.10.4",
     "babel-loader": "^8.1.0",
+    "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.6.0",
     "html-webpack-plugin": "^4.3.0",
     "style-loader": "^1.2.1",
@@ -18,6 +20,7 @@
     "typescript": "^3.9.6",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0"
+    "webpack-dev-server": "^3.11.0",
+    "webpack-merge": "^5.4.0"
   }
 }
